--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "istanbul-threshold-checker": "^0.1.0",
     "lodash": "^4.0.0",
     "minimatch": "^3.0.0",
-    "parseurl": "^1.3.0"
+    "parseurl": "^1.3.0",
+    "express": "^4.16.2"
   },
   "wct-plugin": {
     "cli-options": {
